引入knife4j，调整springboot版本3.0.0,JDK17
1.引入Knife4j用于生成后端文档
2.调整后端文件夹布局
3.修改log4j配置文件
4.修改前端文件命名
5.可以立即看到评论删掉的效果，帖子删掉的效果（前端）